# Surimi-CLI

./: .$DIagram.drawio.bkp  .$DIagram.drawio.dtmp  .gitignore  Cargo.toml  DIagram.drawio  README.md  ascii-art.txt
src/: main.rs
src/file_integrity/: file_listing.rs  hash.rs
