[package]
name = "surimi_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.3"

md-5 = "0.10.5"
chrono = "0.4.26"
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.103"
my_logger = "0.2.1"
tempfile = "3.7.0"
walkdir ="2.3.2"